--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.user.user.field_e_mail
     - field.field.user.user.field_job_title
     - field.field.user.user.field_paragraphs
     - field.field.user.user.field_user_birthday
@@ -14,6 +13,7 @@ dependencies:
     - field.field.user.user.field_user_type_id
     - field.field.user.user.field_vih_banner
     - field.field.user.user.field_vih_user_descr
+    - field.field.user.user.field_vih_user_email
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
     - field.field.user.user.field_vih_user_title
@@ -39,6 +39,7 @@ third_party_settings:
         - field_vih_user_descr
         - field_vih_user_phone
         - field_e_mail
+        - field_vih_user_email
         - field_user_type_id
       parent_name: ''
       weight: 1
@@ -69,7 +70,6 @@ third_party_settings:
       children:
         - field_vih_user_title
         - field_vih_banner
-        - field_banner
       parent_name: ''
       weight: 0
       format_type: tab
@@ -113,14 +113,6 @@ content:
     weight: 5
     region: content
     settings: {  }
-    third_party_settings: {  }
-  field_e_mail:
-    type: email_default
-    weight: 19
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
     third_party_settings: {  }
   field_job_title:
     weight: 13
@@ -167,7 +159,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   field_user_type_id:
-    weight: 20
+    weight: 21
     settings:
       match_operator: CONTAINS
       size: 60
@@ -194,6 +186,14 @@ content:
     region: content
     settings:
       rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_vih_user_email:
+    type: email_default
+    weight: 20
+    region: content
+    settings:
+      size: 60
       placeholder: ''
     third_party_settings: {  }
   field_vih_user_phone:
