--- a/config/sync/core.entity_view_display.user.user.compact.yml
+++ b/config/sync/core.entity_view_display.user.user.compact.yml
@@ -4,20 +4,31 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.compact
-    - field.field.user.user.field_e_mail
+    - field.field.user.user.field_job_title
+    - field.field.user.user.field_paragraphs
     - field.field.user.user.field_user_birthday
     - field.field.user.user.field_user_kvalifikationer
     - field.field.user.user.field_user_name_first
     - field.field.user.user.field_user_name_last
+    - field.field.user.user.field_user_type_id
+    - field.field.user.user.field_vih_banner
     - field.field.user.user.field_vih_user_descr
+    - field.field.user.user.field_vih_user_email
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
     - field.field.user.user.field_vih_user_title
     - image.style.vih_person_teaser
   module:
     - image
+    - panelizer
     - text
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: user.user.compact
 targetEntityType: user
 bundle: user
@@ -47,6 +58,13 @@ content:
       trim_length: 150
     third_party_settings: {  }
     region: content
+  field_vih_user_email:
+    type: basic_string
+    weight: 6
+    region: content
+    label: above
+    settings: {  }
+    third_party_settings: {  }
   field_vih_user_phone:
     type: string
     weight: 4
@@ -74,11 +92,11 @@ content:
     region: content
 hidden:
   field_banner: true
-  field_e_mail: true
   field_job_title: true
   field_paragraphs: true
   field_user_birthday: true
   field_user_kvalifikationer: true
   field_user_type_id: true
+  field_vih_banner: true
   langcode: true
   member_for: true
