--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.user.user.field_vih_banner
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_email
+    - field.field.user.user.field_vih_user_job_title
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
     - field.field.user.user.field_vih_user_title
@@ -33,12 +34,12 @@ third_party_settings:
       children:
         - field_vih_user_photo
         - field_job_title
+        - field_vih_user_job_title
         - field_user_name_first
         - field_user_name_last
         - field_user_birthday
         - field_vih_user_descr
         - field_vih_user_phone
-        - field_e_mail
         - field_vih_user_email
         - field_user_type_id
       parent_name: ''
@@ -138,13 +139,13 @@ content:
     region: content
   field_user_birthday:
     type: datetime_default
-    weight: 16
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
   field_user_name_first:
     type: string_textfield
-    weight: 14
+    weight: 15
     region: content
     settings:
       size: 60
@@ -152,7 +153,7 @@ content:
     third_party_settings: {  }
   field_user_name_last:
     type: string_textfield
-    weight: 15
+    weight: 16
     region: content
     settings:
       size: 60
@@ -182,7 +183,7 @@ content:
     third_party_settings: {  }
   field_vih_user_descr:
     type: text_textarea
-    weight: 17
+    weight: 18
     region: content
     settings:
       rows: 5
@@ -196,9 +197,17 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_vih_user_job_title:
+    type: string_textfield
+    weight: 14
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_vih_user_phone:
     type: string_textfield
-    weight: 18
+    weight: 19
     region: content
     settings:
       size: 60
