--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.user.user.field_vih_banner
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_email
+    - field.field.user.user.field_vih_user_job_title
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
     - field.field.user.user.field_vih_user_title
@@ -36,7 +37,7 @@ bundle: user
 mode: default
 content:
   field_job_title:
-    weight: 11
+    weight: 10
     label: above
     settings:
       link_to_entity: false
@@ -45,7 +46,7 @@ content:
     region: content
   field_paragraphs:
     type: entity_reference_revisions_entity_view
-    weight: 9
+    weight: 8
     label: hidden
     settings:
       view_mode: default
@@ -54,7 +55,7 @@ content:
     region: content
   field_user_birthday:
     type: datetime_default
-    weight: 7
+    weight: 6
     region: content
     label: above
     settings:
@@ -87,7 +88,7 @@ content:
     region: content
   field_vih_banner:
     type: image
-    weight: 10
+    weight: 9
     region: content
     label: above
     settings:
@@ -103,14 +104,22 @@ content:
     region: content
   field_vih_user_email:
     type: email_mailto
-    weight: 6
+    weight: 5
     region: content
     label: above
     settings: {  }
     third_party_settings: {  }
+  field_vih_user_job_title:
+    type: string
+    weight: 11
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
   field_vih_user_phone:
     type: string
-    weight: 8
+    weight: 7
     region: content
     label: above
     settings:
