--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -3,8 +3,6 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.user.user.field_job_title
-    - field.field.user.user.field_paragraphs
     - field.field.user.user.field_user_birthday
     - field.field.user.user.field_user_kvalifikationer
     - field.field.user.user.field_user_name_first
@@ -14,6 +12,7 @@ dependencies:
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_email
     - field.field.user.user.field_vih_user_job_title
+    - field.field.user.user.field_vih_user_paragraphs
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
     - field.field.user.user.field_vih_user_title
@@ -36,23 +35,6 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
-  field_job_title:
-    weight: 10
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_paragraphs:
-    type: entity_reference_revisions_entity_view
-    weight: 8
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    region: content
   field_user_birthday:
     type: datetime_default
     weight: 6
@@ -88,7 +70,7 @@ content:
     region: content
   field_vih_banner:
     type: image
-    weight: 9
+    weight: 10
     region: content
     label: above
     settings:
@@ -116,6 +98,15 @@ content:
     label: above
     settings:
       link_to_entity: false
+    third_party_settings: {  }
+  field_vih_user_paragraphs:
+    type: entity_reference_revisions_entity_view
+    weight: 9
+    region: content
+    label: above
+    settings:
+      view_mode: default
+      link: ''
     third_party_settings: {  }
   field_vih_user_phone:
     type: string
