--- a/config/sync/core.entity_view_display.user.user.compact.yml
+++ b/config/sync/core.entity_view_display.user.user.compact.yml
@@ -4,8 +4,6 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.compact
-    - field.field.user.user.field_job_title
-    - field.field.user.user.field_paragraphs
     - field.field.user.user.field_user_birthday
     - field.field.user.user.field_user_kvalifikationer
     - field.field.user.user.field_user_name_first
@@ -14,6 +12,8 @@ dependencies:
     - field.field.user.user.field_vih_banner
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_email
+    - field.field.user.user.field_vih_user_job_title
+    - field.field.user.user.field_vih_user_paragraphs
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
     - field.field.user.user.field_vih_user_title
@@ -92,11 +92,11 @@ content:
     region: content
 hidden:
   field_banner: true
-  field_job_title: true
-  field_paragraphs: true
   field_user_birthday: true
   field_user_kvalifikationer: true
   field_user_type_id: true
   field_vih_banner: true
+  field_vih_user_job_title: true
+  field_vih_user_paragraphs: true
   langcode: true
   member_for: true
