--- a/config/sync/core.entity_view_display.user.user.teaser.yml
+++ b/config/sync/core.entity_view_display.user.user.teaser.yml
@@ -4,8 +4,6 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.teaser
-    - field.field.user.user.field_job_title
-    - field.field.user.user.field_paragraphs
     - field.field.user.user.field_user_birthday
     - field.field.user.user.field_user_kvalifikationer
     - field.field.user.user.field_user_name_first
@@ -15,6 +13,7 @@ dependencies:
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_email
     - field.field.user.user.field_vih_user_job_title
+    - field.field.user.user.field_vih_user_paragraphs
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
     - field.field.user.user.field_vih_user_title
@@ -34,14 +33,6 @@ targetEntityType: user
 bundle: user
 mode: teaser
 content:
-  field_job_title:
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_user_name_first:
     weight: 3
     label: hidden
@@ -91,12 +82,12 @@ content:
       image_link: ''
     third_party_settings: {  }
 hidden:
-  field_paragraphs: true
   field_user_birthday: true
   field_user_kvalifikationer: true
   field_user_type_id: true
   field_vih_banner: true
   field_vih_user_descr: true
+  field_vih_user_paragraphs: true
   field_vih_user_title: true
   langcode: true
   member_for: true
