--- a/config/sync/field.storage.user.field_vih_user_paragraphs.yml
+++ b/config/sync/field.storage.user.field_vih_user_paragraphs.yml
@@ -1,4 +1,4 @@
-uuid: 301cff85-67ef-4c21-a07d-84fe1b076b0e
+uuid: a436ad9f-9def-4c1c-91f2-f16b45760178
 langcode: da
 status: true
 dependencies:
@@ -6,8 +6,8 @@ dependencies:
     - entity_reference_revisions
     - paragraphs
     - user
-id: user.field_paragraphs
-field_name: field_paragraphs
+id: user.field_vih_user_paragraphs
+field_name: field_vih_user_paragraphs
 entity_type: user
 type: entity_reference_revisions
 settings:
