--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -3,12 +3,12 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.user.user.field_user_birthday
     - field.field.user.user.field_user_kvalifikationer
     - field.field.user.user.field_user_name_first
     - field.field.user.user.field_user_name_last
     - field.field.user.user.field_user_type_id
     - field.field.user.user.field_vih_banner
+    - field.field.user.user.field_vih_user_birthday
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_email
     - field.field.user.user.field_vih_user_job_title
@@ -35,15 +35,6 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
-  field_user_birthday:
-    type: datetime_default
-    weight: 6
-    region: content
-    label: above
-    settings:
-      timezone_override: ''
-      format_type: vih_medium_date_short_month
-    third_party_settings: {  }
   field_user_name_first:
     weight: 2
     label: above
@@ -76,6 +67,15 @@ content:
     settings:
       image_style: ''
       image_link: ''
+    third_party_settings: {  }
+  field_vih_user_birthday:
+    type: datetime_default
+    weight: 7
+    region: content
+    label: above
+    settings:
+      timezone_override: ''
+      format_type: vih_medium_date_short_month
     third_party_settings: {  }
   field_vih_user_descr:
     weight: 4
@@ -110,7 +110,7 @@ content:
     third_party_settings: {  }
   field_vih_user_phone:
     type: string
-    weight: 7
+    weight: 8
     region: content
     label: above
     settings:
