--- a/config/sync/core.entity_view_display.user.user.teaser.yml
+++ b/config/sync/core.entity_view_display.user.user.teaser.yml
@@ -4,12 +4,12 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.teaser
-    - field.field.user.user.field_user_birthday
     - field.field.user.user.field_user_kvalifikationer
     - field.field.user.user.field_user_name_first
     - field.field.user.user.field_user_name_last
     - field.field.user.user.field_user_type_id
     - field.field.user.user.field_vih_banner
+    - field.field.user.user.field_vih_user_birthday
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_email
     - field.field.user.user.field_vih_user_job_title
@@ -82,10 +82,10 @@ content:
       image_link: ''
     third_party_settings: {  }
 hidden:
-  field_user_birthday: true
   field_user_kvalifikationer: true
   field_user_type_id: true
   field_vih_banner: true
+  field_vih_user_birthday: true
   field_vih_user_descr: true
   field_vih_user_paragraphs: true
   field_vih_user_title: true
