--- a/config/sync/field.field.user.user.field_vih_user_birthday.yml
+++ b/config/sync/field.field.user.user.field_vih_user_birthday.yml
@@ -1,14 +1,14 @@
-uuid: 89ea859b-1200-494d-9747-6e94e859c1ff
+uuid: 7f206861-5641-4540-af70-d08842577037
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.user.field_user_birthday
+    - field.storage.user.field_vih_user_birthday
   module:
     - datetime
     - user
-id: user.user.field_user_birthday
-field_name: field_user_birthday
+id: user.user.field_vih_user_birthday
+field_name: field_vih_user_birthday
 entity_type: user
 bundle: user
 label: Fødselsdag
