VI-179 User field_vih_user_kvalifikationer settings

--- a/config/sync/core.entity_view_display.user.user.compact.yml
+++ b/config/sync/core.entity_view_display.user.user.compact.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.compact
-    - field.field.user.user.field_user_kvalifikationer
     - field.field.user.user.field_user_name_first
     - field.field.user.user.field_user_name_last
     - field.field.user.user.field_user_type_id
@@ -13,6 +12,7 @@ dependencies:
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_email
     - field.field.user.user.field_vih_user_job_title
+    - field.field.user.user.field_vih_user_kvalifikationer
     - field.field.user.user.field_vih_user_paragraphs
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
@@ -65,6 +65,14 @@ content:
     label: above
     settings: {  }
     third_party_settings: {  }
+  field_vih_user_kvalifikationer:
+    type: string
+    weight: 9
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
   field_vih_user_phone:
     type: string
     weight: 4
@@ -92,7 +100,6 @@ content:
     region: content
 hidden:
   field_banner: true
-  field_user_kvalifikationer: true
   field_user_type_id: true
   field_vih_banner: true
   field_vih_user_birthday: true
