--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -3,7 +3,6 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.user.user.field_user_name_first
     - field.field.user.user.field_user_name_last
     - field.field.user.user.field_user_type_id
     - field.field.user.user.field_vih_banner
@@ -12,6 +11,7 @@ dependencies:
     - field.field.user.user.field_vih_user_email
     - field.field.user.user.field_vih_user_job_title
     - field.field.user.user.field_vih_user_kvalifikationer
+    - field.field.user.user.field_vih_user_name_first
     - field.field.user.user.field_vih_user_paragraphs
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
@@ -35,16 +35,8 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
-  field_user_name_first:
-    weight: 2
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_user_name_last:
-    weight: 3
+    weight: 4
     label: above
     settings:
       link_to_entity: false
@@ -78,7 +70,7 @@ content:
       format_type: vih_medium_date_short_month
     third_party_settings: {  }
   field_vih_user_descr:
-    weight: 4
+    weight: 5
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -86,7 +78,7 @@ content:
     region: content
   field_vih_user_email:
     type: email_mailto
-    weight: 5
+    weight: 6
     region: content
     label: above
     settings: {  }
@@ -94,6 +86,14 @@ content:
   field_vih_user_job_title:
     type: string
     weight: 11
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+  field_vih_user_name_first:
+    type: string
+    weight: 3
     region: content
     label: above
     settings:
