--- a/config/sync/field.storage.user.field_vih_user_name_first.yml
+++ b/config/sync/field.storage.user.field_vih_user_name_first.yml
@@ -1,11 +1,11 @@
-uuid: 38eb17f9-825e-44a7-b365-ebc07819b5bb
+uuid: 6ed2ae6f-70d0-46c7-8769-7884c3bca708
 langcode: da
 status: true
 dependencies:
   module:
     - user
-id: user.field_user_name_first
-field_name: field_user_name_first
+id: user.field_vih_user_name_first
+field_name: field_vih_user_name_first
 entity_type: user
 type: string
 settings:
