--- a/config/sync/core.entity_view_display.user.user.teaser.yml
+++ b/config/sync/core.entity_view_display.user.user.teaser.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.teaser
-    - field.field.user.user.field_user_type_id
     - field.field.user.user.field_vih_banner
     - field.field.user.user.field_vih_user_birthday
     - field.field.user.user.field_vih_user_descr
@@ -17,6 +16,7 @@ dependencies:
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
     - field.field.user.user.field_vih_user_title
+    - field.field.user.user.field_vih_user_type_id
     - image.style.vih_person_teaser
   module:
     - image
@@ -35,7 +35,7 @@ mode: teaser
 content:
   field_vih_user_email:
     type: basic_string
-    weight: 5
+    weight: 4
     region: content
     label: inline
     settings: {  }
@@ -58,7 +58,7 @@ content:
     third_party_settings: {  }
   field_vih_user_name_last:
     type: string
-    weight: 4
+    weight: 3
     region: content
     label: hidden
     settings:
@@ -66,7 +66,7 @@ content:
     third_party_settings: {  }
   field_vih_user_phone:
     type: string
-    weight: 6
+    weight: 5
     region: content
     label: inline
     settings:
@@ -81,8 +81,16 @@ content:
       image_style: vih_person_teaser
       image_link: ''
     third_party_settings: {  }
+  field_vih_user_type_id:
+    type: entity_reference_entity_view
+    weight: 8
+    region: content
+    label: above
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
 hidden:
-  field_user_type_id: true
   field_vih_banner: true
   field_vih_user_birthday: true
   field_vih_user_descr: true
