--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.user.user.field_user_type_id
     - field.field.user.user.field_vih_banner
     - field.field.user.user.field_vih_user_birthday
     - field.field.user.user.field_vih_user_descr
@@ -17,6 +16,7 @@ dependencies:
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
     - field.field.user.user.field_vih_user_title
+    - field.field.user.user.field_vih_user_type_id
     - image.style.thumbnail
   module:
     - datetime
@@ -34,13 +34,13 @@ third_party_settings:
         - field_vih_user_photo
         - field_vih_user_job_title
         - field_vih_user_name_first
-        - field_user_name_last
         - field_vih_user_name_last
         - field_vih_user_birthday
         - field_vih_user_descr
         - field_vih_user_phone
         - field_vih_user_email
         - field_user_type_id
+        - field_vih_user_type_id
       parent_name: ''
       weight: 1
       format_type: tab
@@ -113,15 +113,6 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_user_type_id:
-    weight: 21
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
   field_vih_banner:
     type: entity_browser_file
     weight: 3
@@ -137,13 +128,13 @@ content:
     third_party_settings: {  }
   field_vih_user_birthday:
     type: datetime_default
-    weight: 17
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
   field_vih_user_descr:
     type: text_textarea
-    weight: 18
+    weight: 17
     region: content
     settings:
       rows: 5
@@ -151,7 +142,7 @@ content:
     third_party_settings: {  }
   field_vih_user_email:
     type: email_default
-    weight: 20
+    weight: 19
     region: content
     settings:
       size: 60
@@ -175,7 +166,7 @@ content:
     third_party_settings: {  }
   field_vih_user_name_last:
     type: string_textfield
-    weight: 16
+    weight: 15
     region: content
     settings:
       size: 60
@@ -197,7 +188,7 @@ content:
     third_party_settings: {  }
   field_vih_user_phone:
     type: string_textfield
-    weight: 19
+    weight: 18
     region: content
     settings:
       size: 60
@@ -216,6 +207,15 @@ content:
     weight: 2
     region: content
     settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_vih_user_type_id:
+    type: entity_reference_autocomplete
+    weight: 21
+    region: content
+    settings:
+      match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
