--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -3,7 +3,6 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.user.user.field_user_type_id
     - field.field.user.user.field_vih_banner
     - field.field.user.user.field_vih_user_birthday
     - field.field.user.user.field_vih_user_descr
@@ -16,6 +15,7 @@ dependencies:
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
     - field.field.user.user.field_vih_user_title
+    - field.field.user.user.field_vih_user_type_id
     - image.style.vih_person_teaser
   module:
     - datetime
@@ -35,17 +35,9 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
-  field_user_type_id:
-    weight: 12
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_banner:
     type: image
-    weight: 10
+    weight: 9
     region: content
     label: above
     settings:
@@ -54,7 +46,7 @@ content:
     third_party_settings: {  }
   field_vih_user_birthday:
     type: datetime_default
-    weight: 7
+    weight: 6
     region: content
     label: above
     settings:
@@ -62,7 +54,7 @@ content:
       format_type: vih_medium_date_short_month
     third_party_settings: {  }
   field_vih_user_descr:
-    weight: 5
+    weight: 4
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -70,14 +62,14 @@ content:
     region: content
   field_vih_user_email:
     type: email_mailto
-    weight: 6
+    weight: 5
     region: content
     label: above
     settings: {  }
     third_party_settings: {  }
   field_vih_user_job_title:
     type: string
-    weight: 11
+    weight: 10
     region: content
     label: above
     settings:
@@ -93,7 +85,7 @@ content:
     third_party_settings: {  }
   field_vih_user_name_last:
     type: string
-    weight: 4
+    weight: 3
     region: content
     label: above
     settings:
@@ -101,7 +93,7 @@ content:
     third_party_settings: {  }
   field_vih_user_paragraphs:
     type: entity_reference_revisions_entity_view
-    weight: 9
+    weight: 8
     region: content
     label: above
     settings:
@@ -110,7 +102,7 @@ content:
     third_party_settings: {  }
   field_vih_user_phone:
     type: string
-    weight: 8
+    weight: 7
     region: content
     label: above
     settings:
@@ -132,6 +124,14 @@ content:
     label: hidden
     settings:
       link_to_entity: false
+    third_party_settings: {  }
+  field_vih_user_type_id:
+    type: entity_reference_label
+    weight: 12
+    region: content
+    label: above
+    settings:
+      link: true
     third_party_settings: {  }
 hidden:
   field_vih_user_kvalifikationer: true
