--- a/config/sync/field.field.user.user.field_vih_user_type_id.yml
+++ b/config/sync/field.field.user.user.field_vih_user_type_id.yml
@@ -1,14 +1,14 @@
-uuid: 7ae32aa4-4f30-437d-b482-9e0ce403a57a
+uuid: 3e2a2e96-327c-442c-8345-838e2572beaf
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.user.field_user_type_id
+    - field.storage.user.field_vih_user_type_id
     - taxonomy.vocabulary.user_types
   module:
     - user
-id: user.user.field_user_type_id
-field_name: field_user_type_id
+id: user.user.field_vih_user_type_id
+field_name: field_vih_user_type_id
 entity_type: user
 bundle: user
 label: 'Bruger type'
