--- a/config/sync/field.storage.user.field_vih_user_type_id.yml
+++ b/config/sync/field.storage.user.field_vih_user_type_id.yml
@@ -1,12 +1,12 @@
-uuid: 80e3c4c5-bb3c-4592-9e73-8fd31f23f990
+uuid: 0ac3bae3-6a17-493d-afbb-65c52fac32e0
 langcode: da
 status: true
 dependencies:
   module:
     - taxonomy
     - user
-id: user.field_user_type_id
-field_name: field_user_type_id
+id: user.field_vih_user_type_id
+field_name: field_vih_user_type_id
 entity_type: user
 type: entity_reference
 settings:
