--- a/config/sync/core.entity_form_display.paragraph.1_column_action_centered.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.1_column_action_centered.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.1_column_action_centered.field_background_image
     - field.field.paragraph.1_column_action_centered.field_description
     - field.field.paragraph.1_column_action_centered.field_vih_background_color
+    - field.field.paragraph.1_column_action_centered.field_vih_background_image
     - field.field.paragraph.1_column_action_centered.field_vih_heading
     - field.field.paragraph.1_column_action_centered.field_vih_link
     - paragraphs.paragraphs_type.1_column_action_centered
@@ -21,7 +21,7 @@ third_party_settings:
     group_appearance:
       children:
         - field_background_image
-        - field_background_color
+        - field_vih_background_image
         - field_vih_background_color
       parent_name: ''
       weight: 5
@@ -39,19 +39,6 @@ targetEntityType: paragraph
 bundle: 1_column_action_centered
 mode: default
 content:
-  field_background_image:
-    type: entity_browser_file
-    weight: 4
-    settings:
-      entity_browser: image_browser
-      field_widget_remove: true
-      selection_mode: selection_append
-      preview_image_style: thumbnail
-      field_widget_edit: true
-      open: false
-      view_mode: default
-    third_party_settings: {  }
-    region: content
   field_description:
     weight: 3
     settings:
@@ -65,6 +52,19 @@ content:
     weight: 6
     region: content
     settings: {  }
+    third_party_settings: {  }
+  field_vih_background_image:
+    type: entity_browser_file
+    weight: 5
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
     third_party_settings: {  }
   field_vih_heading:
     type: string_textfield
