--- a/config/sync/core.entity_view_display.paragraph.event_list.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.event_list.default.yml
@@ -3,13 +3,14 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.event_list.field_background_image
     - field.field.paragraph.event_list.field_event_id
     - field.field.paragraph.event_list.field_vih_background_color
+    - field.field.paragraph.event_list.field_vih_background_image
     - field.field.paragraph.event_list.field_vih_heading
     - field.field.paragraph.event_list.field_vih_link
     - paragraphs.paragraphs_type.event_list
   module:
+    - image
     - link
     - options
 id: paragraph.event_list.default
@@ -23,6 +24,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
+  field_vih_background_image:
+    weight: 3
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   field_vih_heading:
     weight: 0
@@ -45,5 +55,4 @@ content:
     type: link
     region: content
 hidden:
-  field_background_image: true
   field_event_id: true
